syntax = "proto3";
package filetransfer;

option go_package = "../filetransfer";
service FileService {
  rpc SendFile(FileRequest) returns (stream FileResponse);
}
message FileRequest {
  string filename = 1;
}
message FileResponse {
  bytes data = 1;
}
